--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -14,7 +14,7 @@ Prior research (chapter 2) has explored different approaches to this problem in 
 
 To solve these problems in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. I therefore conducted a series of studies to contextualize the IoT users' decision making characteristics, and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behavior. 
 
-In this proposal, I first present the background and related work of this proposal in Chapter~\ref{chapter:Relatedwork}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision on the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click (applicable to the first two works) or by answering a few related questions (applicable to the third work). The current biggest limitation for such ``data-driven" approach is that we did not test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this proposal in Chapter~\ref{chapter:conclusion}.
+In this proposal, I first present the background and related work of this proposal in Chapter~\ref{chapter:Relatedwork1} and~\ref{chapter:Relatedwork2}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision on the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click (applicable to the first two works) or by answering a few related questions (applicable to the third work). The current biggest limitation for such ``data-driven" approach is that we did not test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this proposal in Chapter~\ref{chapter:conclusion}.
 
 %Chapter~\ref{chapter:Relatedwork} presents the background and related work of this proposal and we conclude our proposal in Chapter~\ref{chapter:conclusion}.
 
