--- a/Proposal/2related_work.tex
+++ b/Proposal/2related_work.tex
@@ -1,6 +1,8 @@
 % !TeX root = proposal.tex
 \chapter{IoT technology and IoT Acceptance}\label{chapter:Relatedwork1}
-In this chapter, we discuss how Internet-of-Things enter into people's daily lives, how people benefit from using IoT, and what kinds of disadvantages IoT has brought. First, we introduce IoT technology and the aspects that current IoT research has focused on. We then look at what factors are affecting potential IoT users when they are considering adopting this new technology.
+In this chapter, we first discuss how Internet-of-Things enter into people's daily lives, how people benefit from using IoT, what kinds of disadvantages IoT has brought, and the aspects that current IoT research has focused on. We then look at what factors are affecting potential IoT users when they are considering adopting this new technology.
+
+When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. Thus, we attempt to know the IoT acceptance model for following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 4) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theory model.
 
 \section{IoT Technology}
 The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence advance rapidly during the last two decades, the definition of the IoT has evolved to more broad covering wide range of monitoring and control applications based on a network of sensing and actuating devices that controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
@@ -13,8 +15,6 @@ Furthermore, researchers identified the security and privacy issues as the major
 
 \section{Model the Acceptance of IoT}
 In this section, we first discuss the origin Technology Acceptance Model and adapted Unified Theory of Acceptance and Use of Technology (UTAUT) model. Then we look at what are the factors that affect potential IoT users to adopt IoT systems. 
-
-When users are considering adopting new IoT devices, they want to take the benefits of using IoT devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. Thus, we attempt to know the IoT acceptance model for following reasons: 1) The factors that affect users' adopting phase may have a high chance to also have effect on users' real using phase, which could help us understand how the IoT users make privacy decisions when they share their personal data in different IoT contexts; 2) These factors may further affect how we design the user interface for setting privacy preferences and recommend privacy-settings for different IoT contexts; 4) These factors can potentially help us develop the scales to evaluate the interfaces that we design, and build a theory model.
 
 \subsection{Technology Acceptance Model}
 Many research has attempt to examine the technology acceptance. Among them, the Technology Acceptance Model (TAM) is arguably the most popular model that explains how users come to accept and use a technology~\cite{davis1989user}. TAM suggests that an individual's \textit{Behavioral Intention} to Use an information technology is significantly dependent upon the individual's perception of \textit{Perceived Usefulness} and \textit{Perceived Ease Of Use} of that information technology. Specifically, perceived usefulness is the extent to which an individual believes that using a particular information technology will have a positive impact on his/her performance. Perceived ease of use is the extent to which an individual perceives that using a particular information technology will be free of effort. TAM also proposes that perceived ease of use can explain the variance in perceived usefulness.
@@ -34,7 +34,7 @@ We also conducted a preliminary/pilot study on Clemson University campus (N=15) 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\textwidth]{Proposal/figures/pilot_study_model.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/pilot_study_model.pdf}
 	\caption{The factors that affecting users' adoptions of IoT found in our study}
 	\label{fig:pilotstudymodel}
 \end{figure}
