--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -43,7 +43,9 @@
 \author{Yangyang He}
 \committeeChair{Dr. Bart P. Knijnenburg}
 \committeeMemberOne{Dr. Larry F. Hodges}
-\committeeMemberTwo{Dr. Alexander Herzog}
+\committeeMemberTwo{Dr. Brian Malloy}
+\committeeMemberThree{Dr. Alexander Herzog}
+
 %% optional (for Master's) \committeeMemberThree{Dr. John Doe}
 %% optional \committeeMemberFour{Dr. Jane Doe}
 %% optional \committeeMemberFive{Dr. Mary Doe}
